[package]
name = "vsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# display-link = { git = "https://github.com/BrainiumLLC/display-link" }
display-link = { path = "../display-link/" }
dashmap = "5.5.3"
arc-swap = "1.6.0"
